Replace Arrays.asList with List.of in generateAst.java